--- a/index_error.html
+++ b/index_error.html
@@ -1,13 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>index</title>
+<title>index_error</title>
 <link href="./css/style.css" rel="stylesheet" type="text/css" media="all" />
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-
 </head>
-
 <body class="index">
 	<div class="header">	
 	</div>
@@ -16,6 +14,7 @@
 			<input type="text" name="nome" placeholder="Username" required=""/>  
 			<input type="password" name="password" placeholder="Password" required=""/> 
 			<input type="submit" value="Login">
+                        <p id="error"> Accesso Negato: Credenziali non Valide.</p>
 		</form>
 	</div>	
 	<div class="footer">	
