--- a/home.html
+++ b/home.html
@@ -3,6 +3,7 @@
     <head>
         <title>home</title>
         <link href="./css/style.css" rel="stylesheet" type="text/css" media="all" />
+        <link  rel = "stylesheet"  href = "./font-awesome/css/font-awesome.css" >
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.2/jquery.min.js"></script>
