--- a/home.html
+++ b/home.html
@@ -23,8 +23,8 @@
             <!-- end #menu -->
             <div id="search">
                 <form>
-                    <input type="text" name="s" id="search-text" size="15" />
-                    <input type="submit" id="search-submit" onclick=search() value="Search"  />
+                    <input type="text" id="search-text" size="15" />
+                    <input type="button" id="search-submit" onclick=searchJson() value="Search"  />
                 </form>
             </div>
             <!-- end #search -->
